openshift/base/infrastructure/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlines-elasticsearch-service
  namespace: airlines-backend-microservices
  labels:
    app: airlines-elasticsearch
spec:
  selector:
    app: airlines-elasticsearch
  ports:
    - name: rest
      protocol: TCP
      port: 9200
      targetPort: 9200
    - name: cluster
      protocol: TCP
      port: 9300
      targetPort: 9300
