openshift/base/infrastructure/elasticsearch/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airlines-elasticsearch-route
  namespace: airlines-backend-microservices
spec:
  to:
    kind: Service
    name: airlines-elasticsearch
  port:
    targetPort: rest
  tls:
    termination: edge
